Salesforce CPQ/main/default/objects/WebQuote__c/fields/AverageCustomerDiscount__c.field-meta.xml
<CustomField>
    <fullName>AverageCustomerDiscount__c</fullName>
    <description>Average customer discount (in percent) for this quote.</description>
    <formula>IF(ListAmount__c = 0, 0, ((ListAmount__c - CustomerAmount__c) / ListAmount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average customer discount (in percent) for this quote.</inlineHelpText>
    <label>Avg. Customer Disc. (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>