Salesforce CPQ/main/default/objects/WebQuote__c/fields/CustomerAmount__c.field-meta.xml
<CustomField>
    <fullName>CustomerAmount__c</fullName>
    <description>Roll up summary of the Customer Amount.</description>
    <inlineHelpText>Roll up summary of the Customer Amount.</inlineHelpText>
    <label>Customer Amount</label>
    <summarizedField>WebQuoteLine__c.CustomerTotal__c</summarizedField>
    <summaryFilterItems>
        <field>WebQuoteLine__c.Optional__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>WebQuoteLine__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>