Salesforce CPQ/main/default/objects/WebQuote__c/fields/DaysQuoteOpen__c.field-meta.xml
<CustomField>
    <fullName>DaysQuoteOpen__c</fullName>
    <description>Number of days the quote has been open.</description>
    <formula>if(OR(ISPICKVAL( Status__c ,&quot;Draft&quot; ),ISPICKVAL( Status__c ,&quot;In Review&quot;),ISPICKVAL( Status__c , &quot;Approved&quot;), ISPICKVAL( Status__c , &quot;Presented&quot;)),Round(NOW() - CreatedDate,0) ,null)</formula>
    <inlineHelpText>Number of days the quote has been open.</inlineHelpText>
    <label>Days Quote Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>