Salesforce CPQ/main/default/objects/WebQuote__c/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <description>ID of the Document record which contains the generated document.</description>
    <inlineHelpText>ID of the Document record which contains the generated document.</inlineHelpText>
    <label>Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>