Salesforce CPQ/main/default/objects/WebQuote__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>End date for subscriptions in this group.</description>
    <inlineHelpText>End date for subscriptions in this group.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>