Salesforce CPQ/main/default/objects/WebQuote__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>Date after which the Quote is no longer valid.</description>
    <inlineHelpText>Date after which the Quote is no longer valid.</inlineHelpText>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>