Salesforce CPQ/main/default/objects/WebQuote__c/fields/LineItemCount__c.field-meta.xml
<CustomField>
    <fullName>LineItemCount__c</fullName>
    <description>Number of line items in this quote.</description>
    <inlineHelpText>Number of line items in this quote.</inlineHelpText>
    <label>Line Item Count</label>
    <summaryForeignKey>WebQuoteLine__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>