Salesforce CPQ/main/default/objects/WebQuote__c/fields/ListAmount__c.field-meta.xml
<CustomField>
    <fullName>ListAmount__c</fullName>
    <description>Total List Amount of each non-optional line item in this quote.</description>
    <inlineHelpText>Total List Amount of each non-optional line item in this quote.</inlineHelpText>
    <label>List Amount</label>
    <summarizedField>WebQuoteLine__c.ListTotal__c</summarizedField>
    <summaryFilterItems>
        <field>WebQuoteLine__c.Optional__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>WebQuoteLine__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>