Salesforce CPQ/main/default/objects/WebQuote__c/fields/PartnerDiscount__c.field-meta.xml
<CustomField>
    <fullName>PartnerDiscount__c</fullName>
    <description>Discount extended to partner on this opportunity.</description>
    <inlineHelpText>Discount extended to partner on this opportunity.</inlineHelpText>
    <label>Partner Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>