Salesforce CPQ/main/default/objects/WebQuote__c/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Price Book associated with this web quote.</description>
    <inlineHelpText>The Price Book associated with this web quote.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Web Quotes</relationshipLabel>
    <relationshipName>Web_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>