Salesforce CPQ/main/default/objects/WebQuote__c/fields/PricebookId__c.field-meta.xml
<CustomField>
    <fullName>PricebookId__c</fullName>
    <description>ID of the pricebook that should be used for this quote if opportunity is null.</description>
    <inlineHelpText>If this quote is not tied to an opportunity with a price book, this stores the price book ID for the quote.</inlineHelpText>
    <label>Pricebook Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>