Salesforce CPQ/main/default/objects/WebQuote__c/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact for the quote. This person&apos;s name will appear on the generated quote document.</description>
    <inlineHelpText>Primary contact for the quote. This person&apos;s name will appear on the generated quote document.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>WebQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>