Salesforce CPQ/main/default/objects/WebQuote__c/fields/QuoteProcessId__c.field-meta.xml
<CustomField>
    <fullName>QuoteProcessId__c</fullName>
    <description>ID of the quote process to use with this quote. This field is meant to be populated by a workflow rule.</description>
    <inlineHelpText>Guided selling process ID to use with this quote, if any.</inlineHelpText>
    <label>Quote Process Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>