Salesforce CPQ/main/default/objects/WebQuote__c/fields/ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet__c</fullName>
    <description>Street on the Ship To address for this quote.</description>
    <inlineHelpText>Street on the Ship To address for this quote.</inlineHelpText>
    <label>Ship To Street</label>
    <type>TextArea</type>
</CustomField>