Salesforce CPQ/main/default/objects/WebQuote__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of quote.</description>
    <inlineHelpText>Type of quote.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
                <default>true</default>
                <label>Quote</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Re-Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>