Salesforce CPQ/main/default/objects/WebQuote__c/fields/WatermarkShown__c.field-meta.xml
<CustomField>
    <fullName>WatermarkShown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To display watermark in the Quote Document if checkbox is selected.</description>
    <inlineHelpText>Select the checkbox to display watermark in the Quote Document.</inlineHelpText>
    <label>Watermark Shown</label>
    <type>Checkbox</type>
</CustomField>