Salesforce CPQ/main/default/objects/WebQuote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>SalesRep__c</columns>
    <columns>Status__c</columns>
    <columns>ExpirationDate__c</columns>
    <columns>ListAmount__c</columns>
    <columns>NetAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>